[package]
name = "tree-sitter-pine"
version = "0.1.0"
edition = "2021"
description = "OpenPine grammar for tree-sitter"
license = "MIT"
repository = "https://github.com/ylinwind/tree-sitter-pine"
keywords = ["tree-sitter", "openpine", "parser"]
categories = ["parsing", "text-editors"]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.26"

[build-dependencies]
cc = "1.0"
